2013-06-30  Russ Allbery  <rra@stanford.edu>

	* t/basic.t: Adjust non-numeric item test to force all item tags
	to be non-numeric, required by the current Pod::Simple.

2013-01-05  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 1.00 released.

	* LICENSE: New file summarizing copyright and license information.
	* lib/Pod/Thread.pm: Minor copyright notice change to make it
	easier to parse.
	* scripts/pod2thread: Likewise.

	* t/strict.t: New test for strict, warning, and compilation of all
	Perl code, and for test suite coverage.  The current coverage
	threshold is set quite low.

	* Makefile.PL: Declare the required version of Perl.  Remove
	File::Spec dependency that's satisfied by that Perl version.
	Declare the package license.

	* set-version: New script to substitute the distribution version
	into the modules that make up the distribution.
	* Makefile.PL: Use set-version as a filter when building modules
	for installation.
	* lib/Pod/Thread.pm: Replace version with 0.0, since it will be
	replaced by set-version.

	* scripts/pod2thread: Add all supported command-line options to
	SYNOPSIS and standardize the formatting.

	* t/synopsis.t: New test for the syntax of SYNOPSIS code.

	* t/minimum-version.t: New test for the minimum required version
	of Perl.

	* scripts/pod2thread: Update coding style and formatting.
	* t/basic.t: Likewise.
	* t/critic.t: New test of coding style in all Perl code.
	* t/data/perlcriticrc: Test configuration for perlcritic.
	* t/data/perltidyrc: Test configuration for perltidy.

	* Makefile.PL: Remove conditionals on Perl 5.005, since Perl 5.8
	is now required.  Use angle brackets around my email address.
	Update coding style and formatting.

	* scripts/pod2thread: Remove the code to generate the #! line and
	supporting code and instead rely on ExtUtils::MakeMaker to handle
	that during package build.
	* scripts/pod2thread.PL: Renamed to pod2thread.
	* Makefile.PL: Remove PL_FILES and realclean.
